--- a/main.css
+++ b/main.css
@@ -1,3 +1,22 @@
+body {
+    background: black;
+    color:white;
+}
+
+.top {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 100px;
+    height: 100px;
+}
+
+.about {
+    background:gray;
+}
+
 nav {
     li {
     }
@@ -65,3 +84,4 @@ nav {
         display: block;
     }
 }
+
