--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
 body {
-    background: black;
-    color:white;
+    /*background: black;*/
+    /*background: url('picture.jpg') no-repeat;*/
+    /*background-size: cover;*/
+    font-family: Arial;
+    /*color: white;*/
 }
 
 .top {
@@ -13,75 +16,109 @@ body {
     height: 100px;
 }
 
-.about {
-    background:gray;
+ul {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
 }
 
-nav {
-    li {
-    }
-        display: inline;
-    }
-
-     ul {
-         list-style-type: none;
-         margin: 0;
-         padding: 0;
-         overflow: hidden;
-         background-color: #333;
-         font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
-     }
-
-    li {
-        float: left;
-        padding-left: 5px;
-    }
-
-    li a:hover {
-        color: darkgray;
-    }
-
-    li a, .dropbtn {
-        display: inline-block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
-
-    /*li a:hover, .dropbtn {*/
-        /*display: inline-block;*/
-        /*color: darkgray;*/
-        /*text-align: center;*/
-        /*padding: 14px 16px;*/
-        /*text-decoration: none;*/
-    /*}*/
-
-    li.dropdown {
-        display: inline-block;
-    }
-
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        /*background-color: #f9f9f9;*/
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
-    }
-
-    .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-    }
-
-    .dropdown-content a:hover {background-color: #f1f1f1}
-
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
+ul li {
+    float: left;
+    width: 200px;
+    height: 40px;
+    background-color: black;
+    opacity: .8;
+    line-height: 40px;
+    text-align: center;
+    font-size: 20px;
+    margin-right: 2px;
 }
+
+ul li a {
+    text-decoration: none;
+    color: white;
+    display: block;
+}
+
+ul li a:hover {
+    background-color: green;
+}
+
+ul li ul li {
+    display: none;
+}
+ul li:hover ul li {
+    display: block;
+}
+
+/*.about {*/
+    /*background: #333;*/
+    /*text-align: center;*/
+    /*font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;*/
+/*}*/
+
+/*li {*/
+    /*display: inline;*/
+/*}*/
+
+ /*ul {*/
+     /*list-style-type: none;*/
+     /*margin: 0;*/
+     /*padding: 0;*/
+     /*overflow: hidden;*/
+     /*background-color: #333;*/
+     /*font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;*/
+ /*}*/
+
+/*li {*/
+    /*float: left;*/
+    /*padding-left: 5px;*/
+/*}*/
+
+/*li a:hover {*/
+    /*color: darkgray;*/
+/*}*/
+
+/*li a, .dropbtn {*/
+    /*display: inline-block;*/
+    /*color: white;*/
+    /*text-align: center;*/
+    /*padding: 14px 16px;*/
+    /*text-decoration: none;*/
+/*}*/
+
+/*li a:hover, .dropbtn {*/
+    /*display: inline-block;*/
+    /*color: darkgray;*/
+    /*text-align: center;*/
+    /*padding: 14px 16px;*/
+    /*text-decoration: none;*/
+/*}*/
+
+/*li.dropdown {*/
+    /*display: inline-block;*/
+/*}*/
+
+/*.dropdown-content {*/
+    /*display: none;*/
+    /*position: absolute;*/
+    /*!*background-color: #f9f9f9;*!*/
+    /*min-width: 160px;*/
+    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+    /*z-index: 1;*/
+/*}*/
+
+/*.dropdown-content a {*/
+    /*color: black;*/
+    /*padding: 12px 16px;*/
+    /*text-decoration: none;*/
+    /*display: block;*/
+    /*text-align: left;*/
+/*}*/
+
+/*.dropdown-content a:hover {background-color: #f1f1f1}*/
+
+/*.dropdown:hover .dropdown-content {*/
+    /*display: block;*/
+/*}*/
 
